Renaming and organizing files for clarity.
Former-commit-id: 040156cd2856af3ee0a7197ec8583221908f2e05
Former-commit-id: d7b8d455075d669155a40ea6b78771ede5cc2939 [formerly fbfa196ce69e111545a4ecc396899312f35db1a7]
Former-commit-id: 0551e5c7d00a611a3de2cc73a86927b144885f1d

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -213,7 +213,7 @@
     <ClCompile Include="Source\Audio\sound.cpp" />
     <ClCompile Include="Source\Editor\editorControls.cpp" />
     <ClCompile Include="Source\Editor\editorFactories.cpp" />
-    <ClCompile Include="Source\Editor\editorPanels.cpp" />
+    <ClCompile Include="Source\Editor\componentPanels.cpp" />
     <ClCompile Include="Source\Editor\editorSceneGraphPanel.cpp" />
     <ClCompile Include="Source\Editor\editComponents.cpp" />
     <ClCompile Include="Source\exampleCode.cpp" />
@@ -332,9 +332,10 @@
     <ClInclude Include="Source\Editor\editorControls.h" />
     <ClInclude Include="Source\Editor\editorDefines.h" />
     <ClInclude Include="Source\Editor\editorFactories.h" />
-    <ClInclude Include="Source\Editor\editorPanels.h" />
+    <ClInclude Include="Source\Editor\componentPanels.h" />
     <ClInclude Include="Source\Editor\editorSceneGraphPanel.h" />
     <ClInclude Include="Source\Editor\editComponents.h" />
+    <ClInclude Include="Source\Editor\texturePicker.h" />
     <ClInclude Include="Source\Game\building.h" />
     <ClInclude Include="Source\Game\gameEditor.h" />
     <ClInclude Include="Source\Render\boxaabb.h" />
