Added visitor utility, fixed node copying, updated map to have more particle effects, updated interface for editor to be a bit more component based (still needs another pass over all the panels to fully complete.)
Former-commit-id: 0d2759f5b94af3613b173fa0018976b095718f3a
Former-commit-id: d3002d836afdb56c4b3c64f46ac963be93d7c99f [formerly 7d5d98ed0fafdf85b06afe31d8a9211c30bc5e71]
Former-commit-id: 3ba048c37d259fad4fc4f00406a5354a6683c1ab

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -383,6 +383,7 @@
     <ClInclude Include="Source\Utility\stopwatch.h" />
     <ClInclude Include="Source\Utility\task.hpp" />
     <ClInclude Include="Source\Utility\threadPool.h" />
+    <ClInclude Include="Source\Utility\visitor.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\external\cereal\include\cereal\external\rapidxml\manual.html" />
