--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -182,6 +182,52 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\external\Box2D\Collision\b2BroadPhase.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\b2CollideCircle.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\b2CollideEdge.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\b2CollidePolygon.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\b2Collision.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\b2Distance.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\b2DynamicTree.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\b2TimeOfImpact.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\Shapes\b2ChainShape.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\Shapes\b2CircleShape.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\Shapes\b2EdgeShape.cpp" />
+    <ClCompile Include="..\external\Box2D\Collision\Shapes\b2PolygonShape.cpp" />
+    <ClCompile Include="..\external\Box2D\Common\b2BlockAllocator.cpp" />
+    <ClCompile Include="..\external\Box2D\Common\b2Draw.cpp" />
+    <ClCompile Include="..\external\Box2D\Common\b2Math.cpp" />
+    <ClCompile Include="..\external\Box2D\Common\b2Settings.cpp" />
+    <ClCompile Include="..\external\Box2D\Common\b2StackAllocator.cpp" />
+    <ClCompile Include="..\external\Box2D\Common\b2Timer.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\b2Body.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\b2ContactManager.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\b2Fixture.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\b2Island.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\b2World.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\b2WorldCallbacks.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Contacts\b2ChainAndCircleContact.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Contacts\b2ChainAndPolygonContact.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Contacts\b2CircleContact.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Contacts\b2Contact.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Contacts\b2ContactSolver.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Contacts\b2EdgeAndCircleContact.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Contacts\b2EdgeAndPolygonContact.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Contacts\b2PolygonAndCircleContact.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Contacts\b2PolygonContact.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2DistanceJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2FrictionJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2GearJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2Joint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2MotorJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2MouseJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2PrismaticJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2PulleyJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2RevoluteJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2RopeJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2WeldJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2WheelJoint.cpp" />
+    <ClCompile Include="..\external\Box2D\Rope\b2Rope.cpp" />
     <ClCompile Include="..\external\gl3w\src\gl3w.c" />
     <ClCompile Include="..\external\spine\spine-c\src\spine\Animation.c" />
     <ClCompile Include="..\external\spine\spine-c\src\spine\AnimationState.c" />
@@ -209,6 +255,7 @@
     <ClCompile Include="..\external\spine\spine-c\src\spine\SlotData.c" />
     <ClCompile Include="Source\ArtificialIntelligence\pathfinding.cpp" />
     <ClCompile Include="Source\ClickerGame\clickerGame.cpp" />
+    <ClCompile Include="Source\DiggerGame\diggerGame.cpp" />
     <ClCompile Include="Source\Editor\editor.cpp" />
     <ClCompile Include="Source\Animation\frameSwapper.cpp" />
     <ClCompile Include="Source\Audio\sound.cpp" />
@@ -226,6 +273,7 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">./;./Source</AdditionalIncludeDirectories>
     </ClCompile>
     <ClCompile Include="Source\Network\network.cpp" />
+    <ClCompile Include="Source\Physics\collisionObjects.cpp" />
     <ClCompile Include="Source\Render\boxaabb.cpp" />
     <ClCompile Include="Source\Render\Scene\button.cpp" />
     <ClCompile Include="Source\Render\Scene\clipped.cpp" />
@@ -253,12 +301,61 @@
     <ClCompile Include="Source\Utility\threadPool.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\external\Box2D\Box2D.h" />
+    <ClInclude Include="..\external\Box2D\Collision\b2BroadPhase.h" />
+    <ClInclude Include="..\external\Box2D\Collision\b2Collision.h" />
+    <ClInclude Include="..\external\Box2D\Collision\b2Distance.h" />
+    <ClInclude Include="..\external\Box2D\Collision\b2DynamicTree.h" />
+    <ClInclude Include="..\external\Box2D\Collision\b2TimeOfImpact.h" />
+    <ClInclude Include="..\external\Box2D\Collision\Shapes\b2ChainShape.h" />
+    <ClInclude Include="..\external\Box2D\Collision\Shapes\b2CircleShape.h" />
+    <ClInclude Include="..\external\Box2D\Collision\Shapes\b2EdgeShape.h" />
+    <ClInclude Include="..\external\Box2D\Collision\Shapes\b2PolygonShape.h" />
+    <ClInclude Include="..\external\Box2D\Collision\Shapes\b2Shape.h" />
+    <ClInclude Include="..\external\Box2D\Common\b2BlockAllocator.h" />
+    <ClInclude Include="..\external\Box2D\Common\b2Draw.h" />
+    <ClInclude Include="..\external\Box2D\Common\b2GrowableStack.h" />
+    <ClInclude Include="..\external\Box2D\Common\b2Math.h" />
+    <ClInclude Include="..\external\Box2D\Common\b2Settings.h" />
+    <ClInclude Include="..\external\Box2D\Common\b2StackAllocator.h" />
+    <ClInclude Include="..\external\Box2D\Common\b2Timer.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\b2Body.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\b2ContactManager.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\b2Fixture.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\b2Island.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\b2TimeStep.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\b2World.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\b2WorldCallbacks.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Contacts\b2ChainAndCircleContact.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Contacts\b2ChainAndPolygonContact.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Contacts\b2CircleContact.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Contacts\b2Contact.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Contacts\b2ContactSolver.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Contacts\b2EdgeAndCircleContact.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Contacts\b2EdgeAndPolygonContact.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Contacts\b2PolygonAndCircleContact.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Contacts\b2PolygonContact.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2DistanceJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2FrictionJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2GearJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2Joint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2MotorJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2MouseJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2PrismaticJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2PulleyJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2RevoluteJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2RopeJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2WeldJoint.h" />
+    <ClInclude Include="..\external\Box2D\Dynamics\Joints\b2WheelJoint.h" />
+    <ClInclude Include="..\external\Box2D\Rope\b2Rope.h" />
     <ClInclude Include="..\external\cereal\include\cereal\access.hpp" />
+    <ClInclude Include="..\external\cereal\include\cereal\archives\adapters.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\archives\binary.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\archives\json.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\archives\portable_binary.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\archives\xml.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\cereal.hpp" />
+    <ClInclude Include="..\external\cereal\include\cereal\concepts\pair_associative_container.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\details\helpers.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\details\polymorphic_impl.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\details\static_object.hpp" />
@@ -280,6 +377,7 @@
     <ClInclude Include="..\external\cereal\include\cereal\external\rapidxml\rapidxml_iterators.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\external\rapidxml\rapidxml_print.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\external\rapidxml\rapidxml_utils.hpp" />
+    <ClInclude Include="..\external\cereal\include\cereal\macros.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\types\array.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\types\base_class.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\types\bitset.hpp" />
@@ -301,6 +399,7 @@
     <ClInclude Include="..\external\cereal\include\cereal\types\unordered_map.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\types\unordered_set.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\types\utility.hpp" />
+    <ClInclude Include="..\external\cereal\include\cereal\types\valarray.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\types\vector.hpp" />
     <ClInclude Include="..\external\exprtk\exprtk.hpp" />
     <ClInclude Include="..\external\spine\spine-c\include\spine\Animation.h" />
@@ -330,6 +429,7 @@
     <ClInclude Include="..\external\spine\spine-c\src\spine\Json.h" />
     <ClInclude Include="Source\ArtificialIntelligence\pathfinding.h" />
     <ClInclude Include="Source\ClickerGame\clickerGame.h" />
+    <ClInclude Include="Source\DiggerGame\diggerGame.h" />
     <ClInclude Include="Source\Editor\editor.h" />
     <ClInclude Include="Source\Editor\editorControls.h" />
     <ClInclude Include="Source\Editor\editorDefines.h" />
@@ -340,7 +440,10 @@
     <ClInclude Include="Source\Editor\texturePicker.h" />
     <ClInclude Include="Source\Game\building.h" />
     <ClInclude Include="Source\Game\gameEditor.h" />
+    <ClInclude Include="Source\Physics\collisionObjects.h" />
+    <ClInclude Include="Source\Physics\package.h" />
     <ClInclude Include="Source\Render\boxaabb.h" />
+    <ClInclude Include="Source\Render\Scene\collider.h" />
     <ClInclude Include="Source\Render\Scene\emitter.h" />
     <ClInclude Include="Source\Render\Scene\grid.h" />
     <ClInclude Include="Source\Render\Scene\drawable.h" />
