Beginning to focus on game architecture.
Former-commit-id: 4ed3cf4c1f87e4feb0249c1e390e38165952cc1b [formerly dc8b34794e12e32b4d55fcb9a6a9122a322757c6]
Former-commit-id: b28e5c78ae6fca271d7fca9619d182b458b029b8

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -270,6 +270,7 @@
     <ClCompile Include="Source\exampleCode.cpp" />
     <ClCompile Include="Source\Game\building.cpp" />
     <ClCompile Include="Source\Game\game.cpp" />
+    <ClCompile Include="Source\Game\wallet.cpp" />
     <ClCompile Include="Source\Interface\mouse.cpp" />
     <ClCompile Include="Source\main.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">./;./Source</AdditionalIncludeDirectories>
@@ -443,6 +444,8 @@
     <ClInclude Include="Source\Editor\texturePicker.h" />
     <ClInclude Include="Source\Game\building.h" />
     <ClInclude Include="Source\Game\gameEditor.h" />
+    <ClInclude Include="Source\Game\player.h" />
+    <ClInclude Include="Source\Game\wallet.h" />
     <ClInclude Include="Source\Physics\collider.h" />
     <ClInclude Include="Source\Physics\package.h" />
     <ClInclude Include="Source\Render\boxaabb.h" />
