--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -444,6 +444,7 @@
     <ClInclude Include="Source\Editor\texturePicker.h" />
     <ClInclude Include="Source\Game\building.h" />
     <ClInclude Include="Source\Game\gameEditor.h" />
+    <ClInclude Include="Source\Game\managers.h" />
     <ClInclude Include="Source\Game\player.h" />
     <ClInclude Include="Source\Game\wallet.h" />
     <ClInclude Include="Source\Physics\collider.h" />
