--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -232,30 +232,32 @@
     <ClCompile Include="..\external\Box2D\Dynamics\Joints\b2WheelJoint.cpp" />
     <ClCompile Include="..\external\Box2D\Rope\b2Rope.cpp" />
     <ClCompile Include="..\external\gl3w\src\gl3w.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\Animation.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\AnimationState.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\AnimationStateData.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\Atlas.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\AtlasAttachmentLoader.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\Attachment.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\AttachmentLoader.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\Bone.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\BoneData.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\BoundingBoxAttachment.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\Event.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\EventData.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\extension.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\Json.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\MeshAttachment.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\RegionAttachment.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\Skeleton.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\SkeletonBounds.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\SkeletonData.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\SkeletonJson.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\Skin.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\SkinnedMeshAttachment.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\Slot.c" />
-    <ClCompile Include="..\external\spine\spine-c\src\spine\SlotData.c" />
+    <ClCompile Include="..\external\spine\Animation.c" />
+    <ClCompile Include="..\external\spine\AnimationState.c" />
+    <ClCompile Include="..\external\spine\AnimationStateData.c" />
+    <ClCompile Include="..\external\spine\Atlas.c" />
+    <ClCompile Include="..\external\spine\AtlasAttachmentLoader.c" />
+    <ClCompile Include="..\external\spine\Attachment.c" />
+    <ClCompile Include="..\external\spine\AttachmentLoader.c" />
+    <ClCompile Include="..\external\spine\Bone.c" />
+    <ClCompile Include="..\external\spine\BoneData.c" />
+    <ClCompile Include="..\external\spine\BoundingBoxAttachment.c" />
+    <ClCompile Include="..\external\spine\Event.c" />
+    <ClCompile Include="..\external\spine\EventData.c" />
+    <ClCompile Include="..\external\spine\extension.c" />
+    <ClCompile Include="..\external\spine\IkConstraint.c" />
+    <ClCompile Include="..\external\spine\IkConstraintData.c" />
+    <ClCompile Include="..\external\spine\Json.c" />
+    <ClCompile Include="..\external\spine\MeshAttachment.c" />
+    <ClCompile Include="..\external\spine\RegionAttachment.c" />
+    <ClCompile Include="..\external\spine\Skeleton.c" />
+    <ClCompile Include="..\external\spine\SkeletonBounds.c" />
+    <ClCompile Include="..\external\spine\SkeletonData.c" />
+    <ClCompile Include="..\external\spine\SkeletonJson.c" />
+    <ClCompile Include="..\external\spine\Skin.c" />
+    <ClCompile Include="..\external\spine\SkinnedMeshAttachment.c" />
+    <ClCompile Include="..\external\spine\Slot.c" />
+    <ClCompile Include="..\external\spine\SlotData.c" />
     <ClCompile Include="Source\ArtificialIntelligence\pathfinding.cpp" />
     <ClCompile Include="Source\ClickerGame\clickerGame.cpp" />
     <ClCompile Include="Source\DiggerGame\diggerGame.cpp" />
@@ -406,31 +408,33 @@
     <ClInclude Include="..\external\cereal\include\cereal\types\valarray.hpp" />
     <ClInclude Include="..\external\cereal\include\cereal\types\vector.hpp" />
     <ClInclude Include="..\external\exprtk\exprtk.hpp" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\Animation.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\AnimationState.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\AnimationStateData.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\Atlas.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\AtlasAttachmentLoader.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\Attachment.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\AttachmentLoader.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\Bone.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\BoneData.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\BoundingBoxAttachment.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\Event.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\EventData.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\extension.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\MeshAttachment.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\RegionAttachment.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\Skeleton.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\SkeletonBounds.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\SkeletonData.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\SkeletonJson.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\Skin.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\SkinnedMeshAttachment.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\Slot.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\SlotData.h" />
-    <ClInclude Include="..\external\spine\spine-c\include\spine\spine.h" />
-    <ClInclude Include="..\external\spine\spine-c\src\spine\Json.h" />
+    <ClInclude Include="..\external\spine\Animation.h" />
+    <ClInclude Include="..\external\spine\AnimationState.h" />
+    <ClInclude Include="..\external\spine\AnimationStateData.h" />
+    <ClInclude Include="..\external\spine\Atlas.h" />
+    <ClInclude Include="..\external\spine\AtlasAttachmentLoader.h" />
+    <ClInclude Include="..\external\spine\Attachment.h" />
+    <ClInclude Include="..\external\spine\AttachmentLoader.h" />
+    <ClInclude Include="..\external\spine\Bone.h" />
+    <ClInclude Include="..\external\spine\BoneData.h" />
+    <ClInclude Include="..\external\spine\BoundingBoxAttachment.h" />
+    <ClInclude Include="..\external\spine\Event.h" />
+    <ClInclude Include="..\external\spine\EventData.h" />
+    <ClInclude Include="..\external\spine\extension.h" />
+    <ClInclude Include="..\external\spine\IkConstraint.h" />
+    <ClInclude Include="..\external\spine\IkConstraintData.h" />
+    <ClInclude Include="..\external\spine\Json.h" />
+    <ClInclude Include="..\external\spine\MeshAttachment.h" />
+    <ClInclude Include="..\external\spine\RegionAttachment.h" />
+    <ClInclude Include="..\external\spine\Skeleton.h" />
+    <ClInclude Include="..\external\spine\SkeletonBounds.h" />
+    <ClInclude Include="..\external\spine\SkeletonData.h" />
+    <ClInclude Include="..\external\spine\SkeletonJson.h" />
+    <ClInclude Include="..\external\spine\Skin.h" />
+    <ClInclude Include="..\external\spine\SkinnedMeshAttachment.h" />
+    <ClInclude Include="..\external\spine\Slot.h" />
+    <ClInclude Include="..\external\spine\SlotData.h" />
+    <ClInclude Include="..\external\spine\spine.h" />
     <ClInclude Include="Source\ArtificialIntelligence\pathfinding.h" />
     <ClInclude Include="Source\ClickerGame\clickerGame.h" />
     <ClInclude Include="Source\DiggerGame\diggerGame.h" />
