Updating Map and making onChange less noisy.
Former-commit-id: f19a4cc716ed0b1bb70d13496541fb2698f87a96 [formerly 966bf69558cc769718860d5edc51c41984449de0]
Former-commit-id: 3c49b305681d6ef9cf6a7d8006334615082f1f4a

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -272,6 +272,8 @@
     <ClCompile Include="Source\exampleCode.cpp" />
     <ClCompile Include="Source\Game\building.cpp" />
     <ClCompile Include="Source\Game\game.cpp" />
+    <ClCompile Include="Source\Game\player.cpp" />
+    <ClCompile Include="Source\Game\state.cpp" />
     <ClCompile Include="Source\Game\wallet.cpp" />
     <ClCompile Include="Source\Interface\mouse.cpp" />
     <ClCompile Include="Source\main.cpp">
@@ -450,6 +452,7 @@
     <ClInclude Include="Source\Game\gameEditor.h" />
     <ClInclude Include="Source\Game\managers.h" />
     <ClInclude Include="Source\Game\player.h" />
+    <ClInclude Include="Source\Game\state.h" />
     <ClInclude Include="Source\Game\wallet.h" />
     <ClInclude Include="Source\Physics\collider.h" />
     <ClInclude Include="Source\Physics\package.h" />
