--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -410,6 +410,12 @@
     <ClCompile Include="..\external\spine\SlotData.c">
       <Filter>Spine</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Game\state.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Game\player.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Animation\frameSwapper.h">
@@ -985,6 +991,9 @@
     </ClInclude>
     <ClInclude Include="..\external\spine\spine.h">
       <Filter>Spine</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Game\state.h">
+      <Filter>Source Files\Game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
